@@ -1,49 +1,73 @@
 package sr.will.archiver.youtube;
 
+import com.google.api.client.googleapis.auth.oauth2.GoogleAuthorizationCodeFlow;
+import com.google.api.client.googleapis.javanet.GoogleNetHttpTransport;
+import com.google.api.client.http.javanet.NetHttpTransport;
 import com.google.api.client.json.gson.GsonFactory;
 import sr.will.archiver.Archiver;
-import sr.will.archiver.config.Config;
+import sr.will.archiver.config.ArchiveSet;
 import sr.will.archiver.entity.Vod;
 
-import java.util.*;
+import java.util.Collection;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 public class YouTubeManager {
-    public final Map<String, YouTubeClient> clients = new HashMap<>();
-
-    public static final Collection<String> scopes = Arrays.asList(
+    public static final GsonFactory jsonFactory = GsonFactory.getDefaultInstance();
+    public static final Collection<String> scopes = List.of(
+            "https://www.googleapis.com/auth/youtube.readonly",
             "https://www.googleapis.com/auth/youtube.upload"
     );
 
-    public static final GsonFactory jsonFactory = GsonFactory.getDefaultInstance();
+    public final Map<String, ChannelUploader> channelUploaders = new HashMap<>();
+    public final Map<String, ChannelUploader> pendingCredentials = new HashMap<>();
 
     public YouTubeManager() {
-        for (Config.ArchiveSet archiveSet : Archiver.config.archiveSets) {
-            // Don't try to create a client if uploading is disabled
-            if (!archiveSet.upload) continue;
+        Archiver.uploadExecutor.submit(this::run);
+    }
 
-            // Don't create multiple clients for the same client id
-            if (clients.containsKey(archiveSet.youTube.google.clientId)) continue;
+    public void run() {
+        try {
+            NetHttpTransport httpTransport = GoogleNetHttpTransport.newTrustedTransport();
 
-            clients.put(archiveSet.youTube.google.clientId, new YouTubeClient(this, archiveSet.youTube.google));
+            GoogleAuthorizationCodeFlow flow = new GoogleAuthorizationCodeFlow.Builder(
+                    httpTransport,
+                    jsonFactory,
+                    Archiver.config.upload.google.clientId,
+                    Archiver.config.upload.google.clientSecret,
+                    scopes
+            )
+                    .setCredentialDataStore(new DBDataStore<>("credentials", Archiver.database, null))
+                    .setAccessType("offline")
+                    .build();
+
+            for (ArchiveSet archiveSet : Archiver.config.archiveSets) {
+                // Ignore sets that have uploading disabled
+                // Ignore duplicate sets
+                if (!archiveSet.upload || channelUploaders.containsKey(archiveSet.youTubeUser)) continue;
+                channelUploaders.put(archiveSet.youTubeUser, new ChannelUploader(this, archiveSet.youTubeUser, flow));
+            }
+        } catch (Exception e) {
+            Archiver.LOGGER.error("Failed to initialize YouTube client, not uploading");
+            e.printStackTrace();
         }
-
-        Archiver.LOGGER.info("Created {} youtube clients", clients.size());
 
         List<Vod> vods = Archiver.getVods(Archiver.database.query("SELECT * FROM vods WHERE transcoded = true AND uploaded = false;"));
         Archiver.LOGGER.info("Got {} videos to upload", vods.size());
 
         vods.forEach(this::upload);
-        Archiver.LOGGER.info("Queued {} videos for upload", clients.values().stream().mapToInt(youTubeClient -> youTubeClient.uploaders.size()).sum());
+        Archiver.LOGGER.info("Queued {} videos for upload on {} channels", channelUploaders.values().stream().mapToInt(channelUploader -> channelUploader.videoUploaders.size()).sum(), channelUploaders.size());
     }
 
     public void upload(Vod vod) {
-        Config.ArchiveSet archiveSet = Archiver.getArchiveSet(vod.channelId);
+        ArchiveSet archiveSet = Archiver.getArchiveSet(vod.channelId);
         if (archiveSet == null) {
             Archiver.LOGGER.error("Failed to locate config for channel {}", vod.channelId);
             return;
         }
 
-        if (archiveSet.upload) clients.get(archiveSet.youTube.google.clientId).upload(vod);
+        if (archiveSet.upload) channelUploaders.get(archiveSet.youTubeUser).upload(vod);
         else Archiver.instance.deletionManager.run();
     }
 }
